# local-qna-ai

./: .gitignore  README.md  pyproject.toml
ai_coder/: extract_repo.py  qna.py  run.py
ai_qna/: qna.py  run.py
